--- a/Sources/MapMarkers.fmx
+++ b/Sources/MapMarkers.fmx
@@ -1,5 +1,5 @@
 object frMarkers: TfrMarkers
-  Align = MostBottom
+  Align = Bottom
   Height = 183.000000000000000000
   Width = 412.000000000000000000
   TabOrder = 0
@@ -65,8 +65,6 @@ object frMarkers: TfrMarkers
         Margins.Left = 10.000000000000000000
         Margins.Top = 8.000000000000000000
         Margins.Right = 10.000000000000000000
-        OnClick = edInfo2Click
-        OnEnter = edInfo2Click
       end
       object edInfo2: TClearingEdit
         Touch.InteractiveGestures = [LongTap, DoubleTap]
@@ -79,8 +77,6 @@ object frMarkers: TfrMarkers
         Margins.Left = 10.000000000000000000
         Margins.Top = 8.000000000000000000
         Margins.Right = 10.000000000000000000
-        OnClick = edInfo2Click
-        OnEnter = edInfo2Click
       end
       object edTitle: TClearingEdit
         Touch.InteractiveGestures = [LongTap, DoubleTap]
@@ -93,8 +89,6 @@ object frMarkers: TfrMarkers
         Margins.Left = 10.000000000000000000
         Margins.Top = 8.000000000000000000
         Margins.Right = 10.000000000000000000
-        OnClick = edInfo2Click
-        OnEnter = edInfo2Click
       end
     end
   end
