--- a/TCY/Sources/Main.fmx
+++ b/TCY/Sources/Main.fmx
@@ -19,18 +19,24 @@ object FMain: TFMain
   DesignerDeviceName = 'Google Nexus 4'
   DesignerOrientation = 0
   DesignerOSVersion = ''
+  object Layout1: TLayout
+    Align = Client
+    Height = 520.000000000000000000
+    Width = 384.000000000000000000
+    TabOrder = 3
+  end
   object Rectangle1: TRectangle
     Align = MostTop
-    ClipChildren = True
     Fill.Color = xFF3767A2
     Height = 47.000000000000000000
     Margins.Left = -5.000000000000000000
+    Margins.Right = -5.000000000000000000
     Position.X = -5.000000000000000000
     Sides = [Bottom]
     Stroke.Color = xFF294181
     Stroke.Thickness = 3.000000000000000000
     Stroke.Join = Bevel
-    Width = 389.000000000000000000
+    Width = 394.000000000000000000
     object Image2: TImage
       MultiResBitmap.Height = 48
       MultiResBitmap.Width = 48
@@ -54,16 +60,11 @@ object FMain: TFMain
       Align = Left
       Height = 47.000000000000000000
       Width = 25.000000000000000000
-    end
-    object SpeedButton1: TSpeedButton
-      Action = actShowMenuLateral
-      StyledSettings = [Family, Style, Other]
-      Height = 48.000000000000000000
-      Position.X = 18.000000000000000000
-      TextSettings.Font.Size = 22.000000000000000000
-      TextSettings.FontColor = claWhite
-      TextSettings.HorzAlign = Trailing
-      Width = 103.000000000000000000
+      object GlowEffect3: TGlowEffect
+        Softness = 0.100000001490116100
+        GlowColor = claBlack
+        Opacity = 0.899999976158142100
+      end
     end
     object Text1: TText
       Align = Right
@@ -74,25 +75,33 @@ object FMain: TFMain
       Text = 'Status'
       TextSettings.Font.Size = 16.000000000000000000
       TextSettings.FontColor = claWhite
-      Width = 253.000000000000000000
+      Width = 258.000000000000000000
+      object GlowEffect4: TGlowEffect
+        Softness = 0.100000001490116100
+        GlowColor = claBlack
+        Opacity = 0.899999976158142100
+      end
     end
-  end
-  object TMSFMXWebGMaps1: TTMSFMXWebGMaps
-    Height = 250.000000000000000000
-    Position.Y = 104.000000000000000000
-    Width = 400.000000000000000000
-    Markers = <>
-    Polylines = <>
-    Polygons = <>
-    MapOptions.DefaultLatitude = 48.859040000000000000
-    MapOptions.DefaultLongitude = 2.294297000000000000
-    Directions = <>
-    StreetViewOptions.DefaultLatitude = 48.859040000000000000
-    StreetViewOptions.DefaultLongitude = 2.294297000000000000
-    ControlsOptions.ControlsType = ctDefault
-    TabOrder = 6
-    Version = '1.8.0.2'
-    OnMapClick = TMSFMXWebGMaps1MapClick
+    object GlowEffect1: TGlowEffect
+      Softness = 0.100000001490116100
+      GlowColor = claBlack
+      Opacity = 0.400000005960464500
+    end
+    object SpeedButton1: TSpeedButton
+      Action = actShowMenuLateral
+      StyledSettings = [Family, Style, Other]
+      Height = 48.000000000000000000
+      Position.X = 18.000000000000000000
+      TextSettings.Font.Size = 22.000000000000000000
+      TextSettings.FontColor = claWhite
+      TextSettings.HorzAlign = Trailing
+      Width = 103.000000000000000000
+      object GlowEffect2: TGlowEffect
+        Softness = 0.100000001490116100
+        GlowColor = claBlack
+        Opacity = 0.899999976158142100
+      end
+    end
   end
   object actMenu: TActionList
     Left = 280
