--- a/TCY/Sources/MapGMaps.fmx
+++ b/TCY/Sources/MapGMaps.fmx
@@ -6,69 +6,63 @@ object FrmMapGMaps: TFrmMapGMaps
   inline frMarkers1: TfrMarkers
     Align = Bottom
     Height = 201.000000000000000000
-    Position.Y = 456.000000000000000000
-    Visible = False
-    Width = 529.000000000000000000
+    Position.Y = 299.000000000000000000
+    Width = 428.000000000000000000
     TabOrder = 6
     OnResize = frMarkers1Resize
     inherited Layout1: TLayout
       Height = 201.000000000000000000
-      Width = 529.000000000000000000
-      inherited Rectangle1: TRectangle
-        Width = 529.000000000000000000
-        inherited Text1: TText
-          Width = 529.000000000000000000
-        end
-      end
+      Width = 428.000000000000000000
       inherited Rectangle2: TRectangle
-        Height = 177.000000000000000000
-        Width = 525.000000000000000000
+        Height = 175.000000000000000000
+        Width = 424.000000000000000000
         inherited edInfo1: TClearingEdit
-          Width = 505.000000000000000000
+          Width = 404.000000000000000000
         end
         inherited edInfo2: TClearingEdit
-          Width = 505.000000000000000000
+          Width = 404.000000000000000000
         end
         inherited edTitle: TClearingEdit
-          Width = 505.000000000000000000
+          Width = 404.000000000000000000
         end
         inherited Rectangle3: TRectangle
-          Position.Y = 131.000000000000000000
-          Width = 521.000000000000000000
+          Position.Y = 129.000000000000000000
+          Width = 420.000000000000000000
           inherited Button1: TButton
-            Position.X = 248.000000000000000000
-            Width = 270.000000000000000000
+            Position.X = 200.000000000000000000
+            Width = 217.000000000000000000
+            OnClick = frMarkers1Button1Click
           end
           inherited Button2: TButton
-            Width = 230.000000000000000000
+            Width = 190.000000000000000000
             OnClick = frMarkers1Button2Click
           end
+        end
+      end
+      inherited Rectangle1: TRectangle
+        Width = 428.000000000000000000
+        inherited Text1: TText
+          Width = 428.000000000000000000
         end
       end
     end
   end
   object TMSFMXWebGMaps1: TTMSFMXWebGMaps
-    Height = 250.000000000000000000
-    Position.X = 24.000000000000000000
-    Position.Y = 56.000000000000000000
-    Width = 400.000000000000000000
+    Align = Client
+    Height = 299.000000000000000000
+    Width = 428.000000000000000000
     Markers = <>
     Polylines = <>
     Polygons = <>
-    MapOptions.Language = lnPortuguese_Brazil
-    MapOptions.DefaultLatitude = 10.000000000000000000
-    MapOptions.DefaultLongitude = 20.000000000000000000
+    MapOptions.ZoomMap = 15
+    MapOptions.DefaultLatitude = 48.859040000000000000
+    MapOptions.DefaultLongitude = 2.294297000000000000
     Directions = <>
     StreetViewOptions.DefaultLatitude = 48.859040000000000000
     StreetViewOptions.DefaultLongitude = 2.294297000000000000
-    ControlsOptions.ControlsType = ctZoomPan
-    ControlsOptions.MapTypeControl.Style = mtsDropDownMenu
-    ControlsOptions.StreetViewControl.Visible = False
-    ControlsOptions.OverviewMapControl.Visible = False
-    TabOrder = 9
+    TabOrder = 11
     Version = '1.8.0.2'
     OnMarkerClick = TMSFMXWebGMaps1MarkerClick
-    OnMarkerDragEnd = TMSFMXWebGMaps1MarkerDragEnd
     OnMapClick = TMSFMXWebGMaps1MapClick
   end
   object ClientDataSet1: TClientDataSet
