--- a/TCY/Sources/MapMarkers.fmx
+++ b/TCY/Sources/MapMarkers.fmx
@@ -1,38 +1,23 @@
 object frMarkers: TfrMarkers
   Align = Bottom
-  Height = 176.000000000000000000
+  Height = 196.000000000000000000
   Width = 414.000000000000000000
   TabOrder = 0
   object Layout1: TLayout
     Align = Client
-    Height = 176.000000000000000000
+    Height = 196.000000000000000000
     Width = 414.000000000000000000
     TabOrder = 0
-    object Rectangle1: TRectangle
-      Align = Top
-      Fill.Color = xFF7492C3
-      Height = 24.000000000000000000
-      Sides = []
-      Width = 414.000000000000000000
-      object Text1: TText
-        StyleName = 'headeritemstyle'
-        Align = Client
-        Height = 24.000000000000000000
-        Text = 'Adicionar Marcador'
-        TextSettings.Font.Family = 'Open Sans Light'
-        TextSettings.Font.Size = 16.000000000000000000
-        Width = 414.000000000000000000
-      end
-    end
     object Rectangle2: TRectangle
       Align = Client
       Corners = []
       CornerType = InnerRound
-      Height = 152.000000000000000000
+      Height = 170.000000000000000000
       Margins.Left = 2.000000000000000000
+      Margins.Top = 2.000000000000000000
       Margins.Right = 2.000000000000000000
       Stroke.Color = xFF0835AB
-      Stroke.Thickness = 2.000000000000000000
+      Stroke.Thickness = 0.000000000000000000
       Width = 410.000000000000000000
       object edInfo1: TClearingEdit
         Touch.InteractiveGestures = [LongTap, DoubleTap]
@@ -78,7 +63,7 @@ object frMarkers: TfrMarkers
         Margins.Right = 2.000000000000000000
         Margins.Bottom = 2.000000000000000000
         Position.X = 2.000000000000000000
-        Position.Y = 106.000000000000000000
+        Position.Y = 124.000000000000000000
         Sides = []
         Width = 406.000000000000000000
         object Button1: TButton
@@ -155,6 +140,30 @@ object frMarkers: TfrMarkers
             Height = 38.000000000000000000
             Width = 41.000000000000000000
           end
+        end
+      end
+    end
+    object Rectangle1: TRectangle
+      Align = MostTop
+      Fill.Color = xFF3767A2
+      Height = 24.000000000000000000
+      Sides = [Bottom]
+      Stroke.Color = xFF294181
+      Stroke.Thickness = 2.000000000000000000
+      Width = 414.000000000000000000
+      object Text1: TText
+        StyleName = 'headeritemstyle'
+        Align = Client
+        Height = 24.000000000000000000
+        Text = 'Clique no Mapa para Adicionar um Local'
+        TextSettings.Font.Family = 'Open Sans Light'
+        TextSettings.Font.Size = 16.000000000000000000
+        TextSettings.FontColor = claWhite
+        Width = 414.000000000000000000
+        object GlowEffect1: TGlowEffect
+          Softness = 0.100000001490116100
+          GlowColor = claBlack
+          Opacity = 0.899999976158142100
         end
       end
     end
