--- a/TCY/Sources/MapGMaps.fmx
+++ b/TCY/Sources/MapGMaps.fmx
@@ -1,5 +1,7 @@
 inherited FMapGMaps: TFMapGMaps
+  BorderStyle = None
   Caption = 'FMain1'
+  ClientHeight = 592
   OnResize = FormResize
   DesignerMobile = True
   DesignerWidth = 384
@@ -13,18 +15,11 @@ inherited FMapGMaps: TFMapGMaps
     Left = 112
     Top = 232
   end
-  inherited ScaledLayout1: TScaledLayout
-    inherited rectMenuLateral: TRectangle
-      inherited rectTop: TRectangle
-        inherited imgTop: TImage
-          MultiResBitmap.Height = 108
-          MultiResBitmap.Width = 205
-        end
-      end
-    end
-    object TMSFMXWebGMaps1: TTMSFMXWebGMaps
+  inherited RectClient: TRectangle
+    Height = 545.000000000000000000
+    object TMSFMXWebGMaps1: TTMSFMXWebGMaps [0]
       Align = Client
-      Height = 384.000000000000000000
+      Height = 360.000000000000000000
       Width = 384.000000000000000000
       Markers = <>
       Polylines = <>
@@ -42,23 +37,31 @@ inherited FMapGMaps: TFMapGMaps
       ControlsOptions.MapTypeControl.Visible = False
       ControlsOptions.StreetViewControl.Visible = False
       ControlsOptions.OverviewMapControl.Visible = False
-      TabOrder = 1
+      TabOrder = 2
       Version = '1.8.0.2'
       OnMarkerClick = TMSFMXWebGMaps1MarkerClick
       OnMarkerDragEnd = TMSFMXWebGMaps1MarkerDragEnd
       OnMapClick = TMSFMXWebGMaps1MapClick
     end
+    inherited rectMenuLateral: TRectangle
+      inherited rectTop: TRectangle
+        inherited imgTop: TImage
+          MultiResBitmap.Height = 108
+          MultiResBitmap.Width = 205
+        end
+      end
+    end
     object rectMarkers: TRectangle
       Align = Bottom
       ClipChildren = True
-      Height = 136.000000000000000000
-      Position.Y = 384.000000000000000000
+      Height = 185.000000000000000000
+      Position.Y = 360.000000000000000000
       Width = 384.000000000000000000
       object Rectangle2: TRectangle
         Align = Bottom
         Fill.Kind = None
         Height = 43.000000000000000000
-        Position.Y = 93.000000000000000000
+        Position.Y = 142.000000000000000000
         Sides = []
         Width = 384.000000000000000000
         object Button1: TButton
@@ -83,7 +86,7 @@ inherited FMapGMaps: TFMapGMaps
         Touch.InteractiveGestures = [LongTap, DoubleTap]
         Align = Top
         TabOrder = 1
-        Position.Y = 48.000000000000000000
+        Position.Y = 59.000000000000000000
         Width = 384.000000000000000000
         Height = 32.000000000000000000
         Margins.Top = 10.000000000000000000
@@ -95,15 +98,16 @@ inherited FMapGMaps: TFMapGMaps
         HeaderAppearanceClassName = 'TListHeaderObjects'
         FooterAppearanceClassName = 'TListHeaderObjects'
         Align = Client
-        Height = 17.000000000000000000
+        Height = 25.000000000000000000
         TabOrder = 2
         Visible = False
         Width = 384.000000000000000000
+        OnDeleteItem = ListView1DeleteItem
       end
       object rectMarkersTop: TRectangle
         Align = MostTop
         Fill.Color = xFF3767A2
-        Height = 38.000000000000000000
+        Height = 49.000000000000000000
         Margins.Left = -10.000000000000000000
         Margins.Right = -10.000000000000000000
         Position.X = -10.000000000000000000
@@ -114,7 +118,7 @@ inherited FMapGMaps: TFMapGMaps
         Width = 404.000000000000000000
         object Text2: TText
           Align = Client
-          Height = 38.000000000000000000
+          Height = 49.000000000000000000
           Text = 'Clique no Mapa para Adicionar um Marcador'
           TextSettings.FontColor = claWhite
           Width = 255.000000000000000000
@@ -122,84 +126,55 @@ inherited FMapGMaps: TFMapGMaps
         object Image3: TImage
           MultiResBitmap = <
             item
-              Width = 96
-              Height = 96
+              Width = 44
+              Height = 44
               PNG = {
-                89504E470D0A1A0A0000000D4948445200000060000000600806000000E29877
-                38000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                064449444154785EED9C4B76DB3614866D6BEC05340B7016E0CEED05C49D3B0B
-                B01750CFD3CCD3CE9305C473DB0B50E6F502A205340BF05876FF5FBA54854B90
-                04655C406CEE778E0E083E80FBC09BA00E1CC7711CC7711CC7711CC7719C9F86
-                430927C5F3F3F3F1E1E1E189445720FE28879362920E7879793945F0791D5B03
-                07FC2A8793E24842A712EE80CAB8032AE30EA88C3BA032EE80CAB8032A338979
-                808CFB4F3101E3E4EBF8E8E888F116B8CEC9D813AE2F103E4E6172B6B70E8031
-                2F60F83318F35C4EED04D299C311DF90CEBD9CDA2BF6CA01B2C47089F012063B
-                96D359409AAC19B770EA2DC227395D9DBD71000C736561784DE30838FA8B9CAA
-                4A7507C0202730FE1F304AB0B8A6C17D3F700FDBF47FF0EB6ADBD937BCC1BDA7
-                B8F797F5A938B8670127305FF617D5A8EA0018E11246F85DA22D68745CFF8A43
-                B6E1347C3278F60D823338F77D9F3370FD4F5CBF956871AA3980A51EC1BB752C
-                04C67B8451BEC0F8594631C88B23A82BA4191D3D8107D606392E4A7107C010C7
-                30C8A79831708DEDF34718632EA7B2827CCF91C707E4D1EA67E874E47B836B45
-                3BE8E20E582E979F3B8CCFE1E2476B034801A0135AC35B3A61369B5D4BB40845
-                1DD0D5ECE07CF17618C6EEEA7F8A3647C59622A8308298F159EA8B7782CC9379
-                4B749B77226B118AD40028748252C5D14C8018BFEA0C15B25D40B60F12DD00D9
-                387A321FA216A90150A655A5718ECD4EF5E501CA405924BA2126B305E635008A
-                5C21E06F034ADD1C9DDD8D4493C0331CB99C23BD33846F61B8606C8FEB3F107C
-                4769FE86708EEBA33A730C0E3832D31D3387C2A633665307D06830D81D14DB0C
-                FB70EE094AFD966A20A681FB47AD0F310FDC3B6ADD2787ACBB60DA04D170DA68
-                88270F35611096F83B1C721295647C22F75EF159A6B13EDB0F6582BC7F497405
-                D3A10E1235C1D4012CB572B802714E76922659B8F702019B8564C36BE4D94F92
-                D620B8FF9E324A7485D62137660EA0D2DA788827B5A77C168E6A8D4C7685698D
-                7042202375487D7617CC1C80AACFCE720394E0C2DAE0DA0E9B8C9CC66F609A29
-                CD1165A4AC125DA175C989990350720265A1586B1EA081E22C6DD98DDFC0B499
-                87443BD1B26A5D7262E2009498D8AA238787BD4071D317324C9B7948B48F96AC
-                1D3ABD1AAB1A1008CB2A0DE57BD7F3A5F49B2F01308FA15A405929B3441BA6E3
-                00081FBCDD824229EBFAE796A5BF41F2186C52B4CC5AA75C58D5006DC8C1B759
-                961D9D26312F2DB349E13071004A8FAEAE2935E0AD842548C92B90993AB11FE8
-                FB0D356D31462F45302304C1C711095C737827C75190EEDF725804C8D3FB4187
-                959E1AAB26C849C41D501977406546F701EC68D0CE0D0DC974DB39D8362E97CB
-                7B7474BD9BA972C131FE6C36EB5DDF89F50143FDC62E8CAE013012976D573B8F
-                BB7E50501B3B6512F35DC212A4E415C81CD1290B564D905EEFE72EB55EE0B8C1
-                A58A5C24E6A56536792963E200D492E065364A4F4A0D98E33EB3374F0D92C7E0
-                3B092DB3D62917563520A8AE6CDBA1506F2D60D3869FF9F614E6C1BC241A85B2
-                526689364CA709623F2087DB0C4EFFD1F1DD5AD602A6CD3C24DA474BD60E9D5E
-                8D550DA0B2413587E2EFE5B013A905B1CD525940DA497B3FB5AC5A979C983940
-                7774ACD232B4EB05CFCD715F762730CD94528CFBB82A1B343F5A979C9839004A
-                F0057750DA100FF60775C167733A8169314D89F60219F54602D64AB30D64660E
-                20103C686F11E78A61F20E050437DA89639067AF47189F1B09F4E8C77460E01B
-                B3841CB2EE826F4D14FE975B131BA0DC572817AC1FC19055BFCDDA06CE6B7D2B
-                80730B1492C191DB6B31ED031AA05C6BA731158692661B9E52A10CDAF82426B3
-                05451C8092BE608997E8062899BC63CD02317EECDB00D6CE229FAF16710091E6
-                E6611DFB0F7182F976140DF38C191F3C946C1A8BF401DBF8477A21C56A40038C
-                CCB17D6B464A83C03077B866D624316DE6D1657CCA26D16214AF010D30043BB9
-                BE0FB5F97F0E59D6609017BF0FE63CA26B29E4E7F9507B1B1A058AFB5F15D404
-                86CAF5671D9CA8310DFFB38E5D8013FCEF6A6A03E38C5EF749A5313C1CED7FD8
-                94020CE67F59B62FC0111CBD6CFEB40FBF93580DC175F60D2CE96CD7575B6456
-                17F698493820069CA237F38EDE18BB0F149F883921EE80CAB8032AE30EA88C3B
-                A032EE80CAB8032A33E57940B0B48CF8629F96181CC7711CC7711CC7711CC771
-                1C27E4E0E05F6CADA3A996D290690000000049454E44AE426082}
+                89504E470D0A1A0A0000000D494844520000002C0000002C08060000001E845A
+                01000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+                03C3494441545847ED98DD4B944114C677972C4385C08F202883CC32C41BABBF
+                4110A43F40A482D06EBACC8BE82ABA89AE823E202830F1324A11BCEE36EB4AB2
+                CC2013825221D0285476FB3D336765DD0F77DCDEF503F6818773E6CC9973CECE
+                CC3BEFBC1BABA0820A761671939121954A55C3D3D2E3F1F867F8D775EC552493
+                C966F8DAD86CE6C8903019199851ADDA01D1F4481179C1E5466405B36F1BD802
+                1DC8F3340F89D2CDD6E09C22C07F2F1905B5B3F2BD14D542B31ED6D07613812D
+                89F80D97B0CDD21E4E241253EA2B1525174CA14D882BF012C5542157286801F9
+                0B7E83C2097884FE46642DFD6BC857F03985FF446E1B25154CB16D88DB14D24A
+                117F90E3B427D0E72964C93919F0ADA7FF386A17FDDDE8879133B4EFE03BED9C
+                CA09150BDFC0B7700CB65B5751C8D7C668AC62E887970F2468822396F03E33B5
+                ED87496334D6622896B6567940F041124E22C7B28BA51DC77E089E43BF2C4A97
+                4D7DE6E6A0B11643B106CD1C84E03D4C602DFD53B80EAF673EED243E08FB507B
+                D8A3C7BCD503FB77C428F621B8EAAD1BF11E43BD64AE859E1EC1E730C97A6115
+                1CCF53EC03D47EFA36152B98AD5F3EF2F556121343B12C66AF998B22A8601235
+                409DB32B70C21901B638D4CC7692B4E06A595FA77C35C65B1D144BC7610B0C7A
+                1E420BD62CD52317E0BCB7FAD945681B14DD5AE6D363631C144B3151153B6775
+                F2216FC10CAE668F35234F8A985A610D5C662933CFD933D411944830DF53BEE5
+                B685622D43C5D699EEF259EE6AF964A350C1BACF6ACF3D14D1074826DF39F567
+                E082C96010E7A2A969CC59EC818C7CCAEDEED4D908DA127B0979F71EBF4E5F0D
+                47F9E5AE1F5D37B09B708A65BC2A9BC0D275E0F2CC9A4120561F313E58533134
+                5E47DC3D624DCA864F0AFD07CCF95AC93BC37224A896EAAB8849EF7EDDBAEA48
+                A01B591A9F88AD733608E6FBC5B75CB18A5507157B269DCF72E7FDB40ADA120C
+                56225D111BA12E320EE87A118C6A46BCA5307049E2FFD2C6382816D44D4EB183
+                7E7868C18B7016B516763923C0A6A51B427DA782BC3517D6F71E8E688C337A28
+                56AD62C3456FDA1AC10F1D4987E11AEC6629376E68245A8537E023FA72664936
+                F599CFA657B36259CC6133470B92ECFAE5675B20B8AE972F6054D74BC52ADFF5
+                5220E15992447281572CEB0A46D13B403E2811BCC59E6C4396F289348DBC0B3F
+                7AAF709454B04021853E42753748BFC2F5CF4F1DFDBBFB119A090ADF1F9FF9D9
+                A018DD99751BD3CD6EC01963B127506F301D6D41E7EC8E83A2753D1C17A59B39
+                3204BF38F60A222F9859D5AB571FAAEBA6478AC8F6701AD4B8BFFED0AEA0820A
+                B6422CF60FE937DDEC80AE5CAE0000000049454E44AE426082}
             end>
           Align = Right
-          Height = 34.000000000000000000
+          Height = 45.000000000000000000
           Margins.Right = 12.000000000000000000
           Margins.Bottom = 4.000000000000000000
           Position.X = 328.000000000000000000
           Width = 64.000000000000000000
           OnClick = Image3Click
-          object AniIndicator1: TAniIndicator
-            Align = Client
-            Height = 14.000000000000000000
-            Margins.Left = 10.000000000000000000
-            Margins.Top = 10.000000000000000000
-            Margins.Right = 10.000000000000000000
-            Margins.Bottom = 10.000000000000000000
-            Width = 44.000000000000000000
-          end
         end
         object Rectangle3: TRectangle
           Align = Right
           Fill.Kind = None
-          Height = 38.000000000000000000
+          Height = 49.000000000000000000
           Margins.Right = 1.000000000000000000
           Position.X = 255.000000000000000000
           Sides = []
@@ -207,34 +182,28 @@ inherited FMapGMaps: TFMapGMaps
           Stroke.Thickness = 4.000000000000000000
           Width = 72.000000000000000000
           object Image1: TImage
-            MultiResBitmap.Height = 96
-            MultiResBitmap.Width = 96
             MultiResBitmap = <
               item
-                Width = 96
-                Height = 96
+                Width = 44
+                Height = 44
                 PNG = {
-                  89504E470D0A1A0A0000000D4948445200000060000000600806000000E29877
-                  38000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
-                  017D49444154785EEDDDC14D024118866158CE16A005D8806D481B5A8D05484F
-                  3440015A806716C73007156338B0FBED0ECF9390DDB991BCBACC3F86B8000000
-                  000080E12DEBF5A2FABEBF5B2E97B775D984C3E1F0DE75DD5B5D5ECC2001CA9B
-                  7D2A97AF574B36E5876A53EF2FA6AB5742040813204C803001C2040813204C80
-                  3001C2469D84FBBEFF2897DD713559775DD7FD758C32C8243C7680ED6AB57AAE
-                  CB49FAE718C551448B0408731A7A3E8FA0160910264098006102848D3D88EDCA
-                  94F9529753B52EAFC7E3ED0F26E1319884AF8C47D0A9761F4133E711D42201C2
-                  040813204C803083D82F06B12B23409849F8944978A27C06B448803001C20408
-                  13206CEC5DD0203B894BDAEFF7AF65ABFC5097DFD905B54880B0D10FE3CAAFF7
-                  B62E27A9BCC775798F6D7E4163E67C06B448803001C204081B7B173487AFA9DE
-                  975DD04DBDFF6EFEBBA039FC4DD8247C65040833889DCF23A845028409102640
-                  98006102840910264098006102840D7214D1FB070E0000000000301D8BC52734
-                  68AB72657E3FF40000000049454E44AE426082}
-                FileName = 
-                  'C:\Users\LuizFernando\Desktop\GIT\TCY\trunk\TCY\Android Design\A' +
-                  'ction Bar Icons\holo_dark\ic_action_view_as_list (4).png'
+                  89504E470D0A1A0A0000000D494844520000002C0000002C08060000001E845A
+                  01000000017352474200AECE1CE90000000467414D410000B18F0BFC61050000
+                  015F494441545847ED98312F04611086772F1112A2D368241AAD443414FE889A
+                  92D23FA0A4A4F64328689CE45A8D44A3A110212127BB9ED9FD0ACD31B73B5FD8
+                  CF3CC9E4DD9B4BDE7B6F7676F77299E3384E5AE441BFA52CCB45640B9DAA3BB6
+                  E479FE869CA0B7756734DAC0CBC821355335EC79A176093CA85F8EA617B433A4
+                  1F98F5F840E414B6AEE0351663EF30C757ECDA71F5464BF0DAC66B9543F902D1
+                  76F89D0F7AB428F1AA2DF5F85D22364D76F81EBD96BE012B4C751E554F588504
+                  A6CEA87E5114FB68CFA282579F126F19CA8F3499F0037A237D039698EA1CAA9E
+                  70FA171DE187D493510D83AD9A262B71891E49DF801DA6BA86FA6DEDEB84E534
+                  BE4ADF8069A63A81A67BD13599F01D7A217D03D609B980AA03AB90C054671F1C
+                  BFFA68FE173B2CBF619FA56FC02C2127D1A881CFD103E91BB047C80D346AE001
+                  C6A7D51B2DC16B132FF14E77873BF768F6C0B1D1EEF09FF933D0711C2729B2EC
+                  130FECFEEA486C7ED70000000049454E44AE426082}
               end>
             Align = Client
-            Height = 34.000000000000000000
+            Height = 45.000000000000000000
             Margins.Bottom = 4.000000000000000000
             Width = 72.000000000000000000
             OnClick = Image1Click
